fix: (CXSPA-8813) B2C button My Store not properly styled
* replace cx-card-actions buttons with links

* https://jira.tools.sap/browse/CXSPA-8813

--- a/feature-libs/pickup-in-store/styles/_my-preferred-store.scss
+++ b/feature-libs/pickup-in-store/styles/_my-preferred-store.scss
@@ -77,6 +77,18 @@
         }
       }
     }
+
+    @include forFeature('a11yImproveButtonsInCardComponent') {
+      cx-card {
+        .cx-card-actions:not(:disabled):not(.disabled):active {
+          background-color: unset;
+        }
+        .cx-card-actions {
+          border: unset;
+          margin-top: 0;
+        }
+      }
+    }
   }
   @include cx-highContrastTheme {
     .btn-outline-text {
