fix: (CXSPA-8813) B2C button My Store not properly styled
* fix test
* code review fix

* https://jira.tools.sap/browse/CXSPA-8813

--- a/projects/storefrontlib/shared/components/card/card.component.html
+++ b/projects/storefrontlib/shared/components/card/card.component.html
@@ -226,7 +226,7 @@
             *ngIf="isCardLinkAction(action)"
             [url]="action.link"
             [ariaLabel]="
-              action.ariaLabel ? (action.ariaLabel | cxTranslate) : null
+              action.ariaLabel ? (action.ariaLabel | cxTranslate) : undefined
             "
             [target]="action.target ?? null"
             >{{ action.name }}</cx-generic-link
