fix: (CXSPA-8813) B2C button My Store not properly styled
* removed bootstrap buttons import

* https://jira.tools.sap/browse/CXSPA-8813

--- a/projects/storefrontstyles/scss/components/misc/card/_card.scss
+++ b/projects/storefrontstyles/scss/components/misc/card/_card.scss
@@ -77,7 +77,7 @@
     .cx-card-actions {
       gap: 16px;
       cx-generic-link {
-        font-weight: 700;
+        font-weight: var(--cx-font-weight-semi);
         color: var(--cx-color-primary);
         text-decoration: underline;
       }
