--- a/feature-libs/pickup-in-store/styles/_my-preferred-store.scss
+++ b/feature-libs/pickup-in-store/styles/_my-preferred-store.scss
@@ -1,5 +1,4 @@
 %cx-my-preferred-store {
-  @import 'bootstrap/scss/buttons';
 
   .cx-store-opening-hours-toggle {
     @include type('6');
@@ -40,7 +39,7 @@
     }
     cx-card {
       .cx-card-actions {
-        @extend .btn, .btn-sm, .btn-block;
+        @extend .btn, .btn-sm, .btn-block !optional;
         @extend .btn-outline-text !optional;
         border-width: 2px;
         border-style: solid;
@@ -86,6 +85,9 @@
         .cx-card-actions {
           border: unset;
           margin-top: 0;
+        }
+        .cx-card-actions > *:only-child {
+          flex: 1;
         }
       }
     }
