fix: (CXSPA-8813) B2C button My Store not properly styled
* button style override

* https://jira.tools.sap/browse/CXSPA-8813

--- a/feature-libs/pickup-in-store/styles/_my-preferred-store.scss
+++ b/feature-libs/pickup-in-store/styles/_my-preferred-store.scss
@@ -1,4 +1,6 @@
 %cx-my-preferred-store {
+  @import 'bootstrap/scss/buttons';
+
   .cx-store-opening-hours-toggle {
     @include type('6');
     color: $cx-color-link-primary;
