--- a/projects/storefrontlib/shared/components/card/card.component.html
+++ b/projects/storefrontlib/shared/components/card/card.component.html
@@ -3,10 +3,13 @@
   class="cx-card"
   [tabindex]="border ? 0 : -1"
   [attr.role]="content.role ?? null"
-  [attr.aria-label]="
-    content.label ? (content.label | cxTranslate: { number: this.index }) : null
+  [attr.aria-labelledby]="
+    content.header ? 'content-header' + (index >= 0 ? '-' + index : '') : null
   "
-  [attr.aria-describedby]="ariaDescribedBy"
+  [attr.aria-describedby]="
+    (content.title ? 'content-title' : '') +
+    (ariaDescribedBy ? ' ' + ariaDescribedBy : '')
+  "
   [class.cx-card-border]="border"
   [class.cx-card-fit-to-container]="fitToContainer"
 >
@@ -25,7 +28,7 @@
       {{ content.deleteMsg }}
     </div>
     <!-- Card title -->
-    <span *ngIf="content.title" class="cx-card-title">
+    <span *ngIf="content.title" class="cx-card-title" id="content-title">
       {{ content.title }}
     </span>
     <!-- Card Content -->
