--- a/integration-libs/opf/checkout/styles/components/_opf-checkout-payment-and-review.scss
+++ b/integration-libs/opf/checkout/styles/components/_opf-checkout-payment-and-review.scss
@@ -87,7 +87,7 @@
     }
   }
 
-  > section cx-opf-checkout-terms-and-conditions-alert {
+  > section > cx-opf-checkout-terms-and-conditions-alert {
     display: none;
     @include media-breakpoint-down(md) {
       display: block;
