--- a/projects/storefrontlib/cms-components/navigation/search-box/search-box.component.html
+++ b/projects/storefrontlib/cms-components/navigation/search-box/search-box.component.html
@@ -386,19 +386,37 @@
   <span id="initialDescription" class="cx-visually-hidden">
     {{ 'searchBox.initialDescription' | cxTranslate }}
   </span>
-  <div
-    *ngIf="result.suggestions?.length || result.products?.length"
-    aria-live="assertive"
-    class="cx-visually-hidden"
-  >
-    {{
-      'searchBox.suggestionsResult'
-        | cxTranslate: { count: result.suggestions?.length }
-    }}
-    {{
-      'searchBox.productsResult'
-        | cxTranslate: { count: result.products?.length }
-    }}
-    {{ 'searchBox.initialDescription' | cxTranslate }}
-  </div>
+  <ng-container *cxFeature="'a11ySearchboxAssistiveMessage'">
+    <div
+      *ngIf="result.suggestions?.length || result.products?.length"
+      aria-live="assertive"
+      class="cx-visually-hidden"
+    >
+      {{
+        'searchBox.suggestionsResult'
+          | cxTranslate: { count: result.suggestions?.length }
+      }}
+      {{
+        'searchBox.productsResult'
+          | cxTranslate: { count: result.products?.length }
+      }}
+    </div>
+  </ng-container>
+  <ng-container *cxFeature="'!a11ySearchboxAssistiveMessage'">
+    <div
+      *ngIf="result.suggestions?.length || result.products?.length"
+      aria-live="assertive"
+      class="cx-visually-hidden"
+    >
+      {{
+        'searchBox.suggestionsResult'
+          | cxTranslate: { count: result.suggestions?.length }
+      }}
+      {{
+        'searchBox.productsResult'
+          | cxTranslate: { count: result.products?.length }
+      }}
+      {{ 'searchBox.initialDescription' | cxTranslate }}
+    </div>
+  </ng-container>
 </div>
