--- a/projects/storefrontlib/shared/components/card/card.component.html
+++ b/projects/storefrontlib/shared/components/card/card.component.html
@@ -3,13 +3,8 @@
   class="cx-card"
   [tabindex]="border ? 0 : -1"
   [attr.role]="content.role ?? null"
-  [attr.aria-labelledby]="
-    content.header ? 'content-header' + (index >= 0 ? '-' + index : '') : null
-  "
-  [attr.aria-describedby]="
-    (content.title ? 'content-title' : '') +
-    (ariaDescribedBy ? ' ' + ariaDescribedBy : '')
-  "
+  [attr.aria-labelledby]="ariaLabelledBy"
+  [attr.aria-describedby]="ariaDescribedBy"
   [class.cx-card-border]="border"
   [class.cx-card-fit-to-container]="fitToContainer"
 >
@@ -17,7 +12,7 @@
   <div
     *ngIf="content.header && !editMode"
     class="card-header"
-    [id]="'content-header' + (index >= 0 ? '-' + index : '')"
+    [id]="ariaLabelledBy"
   >
     {{ content.header }}
   </div>
@@ -28,11 +23,18 @@
       {{ content.deleteMsg }}
     </div>
     <!-- Card title -->
-    <span *ngIf="content.title" class="cx-card-title" id="content-title">
+    <span
+      *ngIf="content.title"
+      class="cx-card-title"
+      [id]="'content-title' + (index >= 0 ? '-' + index : '')"
+    >
       {{ content.title }}
     </span>
     <!-- Card Content -->
-    <div class="cx-card-container" [id]="ariaDescribedBy">
+    <div
+      class="cx-card-container"
+      [id]="'cx-card-container' + (index >= 0 ? '-' + index : '')"
+    >
       <!-- Card Label -->
       <div class="cx-card-label-container">
         <div *ngIf="content.textBold" class="cx-card-label-bold">
