--- a/projects/storefrontlib/shared/components/card/card.component.html
+++ b/projects/storefrontlib/shared/components/card/card.component.html
@@ -3,7 +3,7 @@
   class="cx-card"
   [tabindex]="border ? 0 : -1"
   [attr.role]="content.role ?? null"
-  [attr.aria-labelledby]="ariaLabelledBy"
+  [attr.aria-labelledby]="getLabel('content-header')"
   [attr.aria-describedby]="ariaDescribedBy"
   [class.cx-card-border]="border"
   [class.cx-card-fit-to-container]="fitToContainer"
@@ -12,7 +12,7 @@
   <div
     *ngIf="content.header && !editMode"
     class="card-header"
-    [id]="ariaLabelledBy"
+    [id]="getLabel('content-header')"
   >
     {{ content.header }}
   </div>
