--- a/integration-libs/opf/checkout/styles/components/_opf-checkout-payments.scss
+++ b/integration-libs/opf/checkout/styles/components/_opf-checkout-payments.scss
@@ -49,6 +49,10 @@
   .cx-payment-info-box {
     display: flex;
     margin: 12px 0;
+    padding: 16px;
+    border: 1px solid #d3d6db;
+    border-radius: 10px;
+    background-color: #f1f1f1f1;
 
     cx-icon {
       color: var(--cx-color-info);
@@ -57,5 +61,7 @@
 
   .cx-payment-info-box-message {
     text-transform: none;
+    margin: 0;
+    font-weight: 600;
   }
 }
