fix: make form required fields * red

--- a/projects/storefrontstyles/scss/cxbase/blocks/forms.scss
+++ b/projects/storefrontstyles/scss/cxbase/blocks/forms.scss
@@ -161,6 +161,10 @@ label {
       font-weight: var(--cx-font-weight-semi);
     }
   }
+  
+  abbr[title="required"] {
+    color: var(--cx-color-danger);
+  }
 }
 
 .notes-content {
