fix: fix prettier issue

--- a/projects/storefrontstyles/scss/cxbase/blocks/forms.scss
+++ b/projects/storefrontstyles/scss/cxbase/blocks/forms.scss
@@ -161,8 +161,8 @@ label {
       font-weight: var(--cx-font-weight-semi);
     }
   }
-  
-  abbr[title="required"] {
+
+  abbr[title='required'] {
     color: var(--cx-color-danger);
   }
 }
