--- a/feature-libs/storefinder/components/store-finder-search/store-finder-search.component.html
+++ b/feature-libs/storefinder/components/store-finder-search/store-finder-search.component.html
@@ -1,5 +1,36 @@
 <div class="container">
-  <div class="row align-items-end">
+  <div class="row" *cxFeature="'!a11yStoreFinderLabel'">
+    <div class="col-md-12 col-lg-6">
+      <div class="form-group search-wrapper">
+        <input
+          #queryInput
+          [formControl]="searchBox"
+          (keyup)="onKey($event)"
+          type="text"
+          class="form-control"
+          [attr.aria-label]="'storeFinder.searchBoxLabel' | cxTranslate"
+          placeholder="{{ 'storeFinder.searchBox' | cxTranslate }}"
+        />
+        <cx-icon
+          [attr.tabindex]="queryInput.value?.length ? 0 : -1"
+          [type]="iconTypes.SEARCH"
+          role="button"
+          [attr.aria-label]="'storeFinder.searchNearestStores' | cxTranslate"
+          [attr.title]="'storeFinder.searchNearestStores' | cxTranslate"
+          class="search"
+          (keyup)="onKey($event)"
+          [routerLink]="['/store-finder/find']"
+          [queryParams]="{ query: queryInput.value }"
+          [ngClass]="{
+            'disabled-action': !(queryInput.value && queryInput.value.length),
+          }"
+        ></cx-icon>
+      </div>
+    </div>
+    <ng-template [ngTemplateOutlet]="searchActionButtons"></ng-template>
+  </div>
+
+  <div class="row align-items-end" *cxFeature="'a11yStoreFinderLabel'">
     <div class="col-md-12 col-lg-6">
       <div class="form-group">
         <label class="">
@@ -38,25 +69,30 @@
         </label>
       </div>
     </div>
-    <div class="col-md-12 col-lg-6">
-      <div class="row cx-search-links mb-3">
-        <div class="col-6">
-          <button
-            (click)="viewStoresWithMyLoc()"
-            class="btn btn-primary btn-block"
-          >
-            {{ 'storeFinder.useMyLocation' | cxTranslate }}
-          </button>
-        </div>
-        <div class="col-6">
-          <button
-            [routerLink]="['/store-finder/view-all']"
-            class="btn btn-primary btn-block"
-          >
-            {{ 'storeFinder.viewAllStores' | cxTranslate }}
-          </button>
-        </div>
+    <ng-template [ngTemplateOutlet]="searchActionButtons"></ng-template>
+  </div>
+
+</div>
+
+<ng-template #searchActionButtons>
+  <div class="col-md-12 col-lg-6">
+    <div class="row cx-search-links mb-3">
+      <div class="col-6">
+        <button
+          (click)="viewStoresWithMyLoc()"
+          class="btn btn-primary btn-block"
+        >
+          {{ 'storeFinder.useMyLocation' | cxTranslate }}
+        </button>
+      </div>
+      <div class="col-6">
+        <button
+          [routerLink]="['/store-finder/view-all']"
+          class="btn btn-primary btn-block"
+        >
+          {{ 'storeFinder.viewAllStores' | cxTranslate }}
+        </button>
       </div>
     </div>
   </div>
-</div>
+</ng-template>
