fix: remove unused class attribute

--- a/feature-libs/storefinder/components/store-finder-search/store-finder-search.component.html
+++ b/feature-libs/storefinder/components/store-finder-search/store-finder-search.component.html
@@ -33,7 +33,7 @@
   <div class="row align-items-end" *cxFeature="'a11yStoreFinderLabel'">
     <div class="col-md-12 col-lg-6">
       <div class="form-group">
-        <label class="">
+        <label>
           <span class="text-left label-content">
             {{ 'storeFinder.findStoreBy' | cxTranslate }}
           </span>
