--- a/feature-libs/customer-ticketing/styles/components/_customer-ticketing-dialog.scss
+++ b/feature-libs/customer-ticketing/styles/components/_customer-ticketing-dialog.scss
@@ -90,6 +90,13 @@
           }
         }
       }
+
+      @include forFeature('a11yRemovePaddingOfCloseButton') {
+        .cx-customer-ticket-form-close {
+          padding: 0;
+        }
+      }
+
       @include cx-highContrastTheme {
         color: var(--cx-color-text);
         background-color: var(--cx-color-background);
