--- a/feature-libs/product/image-zoom/components/product-image-zoom/product-image-zoom-view/product-image-zoom-view.component.html
+++ b/feature-libs/product/image-zoom/components/product-image-zoom/product-image-zoom-view/product-image-zoom-view.component.html
@@ -1,8 +1,11 @@
 <ng-container *ngIf="mainImage$ | async as main">
   <div class="cx-main-image-group" *ngIf="thumbnails$ | async as thumbs">
-    <div class="cx-navigate-image">
+    <div class="cx-navigate-image" aria-labelledby="previouButton">
       <button
         class="btn btn-link"
+        id="previouButton"
+        [attr.aria-label]="'carousel.previousSlide' | cxTranslate"
+        [attr.title]="'carousel.previousSlide' | cxTranslate"
         *ngIf="getPreviousProduct(thumbs) | async as previousProduct"
         (click)="openImage(previousProduct.container)"
       >
@@ -78,9 +81,12 @@
         >
         </cx-media></div
     ></ng-container>
-    <div class="cx-navigate-image">
+    <div class="cx-navigate-image" aria-labelledby="nextButton">
       <button
+        id="nextButton"
         class="btn btn-link"
+        [attr.aria-label]="'carousel.nextSlide' | cxTranslate"
+        [attr.title]="'carousel.nextSlide' | cxTranslate"
         *ngIf="getNextProduct(thumbs) | async as nextProduct"
         (click)="openImage(nextProduct.container)"
       >
